Add board endpoints
